## Changes

- Remove training data from coverage benchmarks
- Make propositional benchmark use crossvalidation
- Add coverage benchmarks to relational and propositional
- Add syllogistic network models (2019-Riesterer)
- Improve package documentation
- Overhaul benchmark handling
- Add possibility to supply multiple datasets as list in benchmark JSON
- Streamline evaluator
- Add "prediction" evaluation type as an evaluation without adaption
- Change model interface to pre_train, pre_train_person, and pre_train_background

## Version 0.16.0

- Add automatic inclusion of default domain encoders
- Add dynamic CSS dependency handling for result visualizers
- Add MFA table visualizer
- Add propositional domain encoder
- Add coverage evaluation
- Add more information to HTML output benchmark information
- Add person_train to MFA model
- Fix module import problems in modelimporter
- Add tab-based visualization
- Enhance cache integration
- Rework standard benchmarks
- Update relational benchmarks to use crossvalidation instead of train-test split
- Fix start_participant hook
- Add dataset_to_matrix syllogistic helper function
- Update documentation